// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleIcon render ToggleIcon 1`] = `
<Tooltip
  content="Notifications"
  id="notifications-toggle-icon"
  position="bottom"
>
  <span
    aria-describedby="tooltip"
    className="fa fa-bell-o"
    onClick={[Function]}
  />
</Tooltip>
`;

exports[`ToggleIcon render ToggleIcon with unread-messages 1`] = `
<Tooltip
  content="Notifications"
  id="notifications-toggle-icon"
  position="bottom"
>
  <span
    aria-describedby="tooltip"
    className="fa fa-bell"
    onClick={[Function]}
  />
</Tooltip>
`;
